fixed layout bug, responsive, cursor dis mobile

--- a/static/style.css
+++ b/static/style.css
@@ -47,7 +47,6 @@ header {
 /* section:nth-child(3) {
   background: black;
 }
-
 /* section:nth-child(4) {
   background: black;
 } */
@@ -1862,6 +1861,9 @@ button:hover {
 .eve_title {
   color: white;
   font-size: 2vw;
+  text-align: center;
+  height: 2.4vw;
+  width: 23vw;
 }
 
 .eve_tag {
@@ -2006,7 +2008,7 @@ button:hover {
   height: 100%;
   background: #0000003a;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   align-content: center;
@@ -2024,7 +2026,7 @@ button:hover {
 }
 
 .eve_detail_1_2 {
-  width: 100%;
+  width: 78%;
   height: fit-content;
   display: flex;
   font-size: 1vw;
@@ -2074,7 +2076,8 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  width: 78%;
+  margin-top: 2vw;
 }
 
 .eve_detail_1_3_cont {
@@ -2084,7 +2087,7 @@ button:hover {
   gap: 1vw;
   margin-bottom: 1vw;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   margin-top: 0.7vw;
   flex-wrap: wrap;
   row-gap: 0.6vw;
@@ -2107,7 +2110,7 @@ button:hover {
 .eve_detail_1_4 {
   display: flex;
   margin-top: 2vw;
-  margin-top: 5vw;
+  margin-top: 3vw;
 }
 
 .eve_detail_reg {
@@ -2117,7 +2120,6 @@ button:hover {
   align-items: center;
   align-content: center;
   width: 100%;
-  height: 100%;
   font-size: 1.2vw;
   font-family: "jura";
   color: black;
@@ -2472,6 +2474,10 @@ button:hover {
 
 .nigus:hover {
   text-decoration: underline;
+}
+
+.mob {
+  display: none;
 }
 
 @media only screen and (max-width: 600px) {
@@ -2993,6 +2999,9 @@ button:hover {
   }
   .eve_title {
     font-size: 7vw;
+    text-align: center;
+    height: 10vw;
+    width: 80vw;
   }
   .eve_tag {
     font-size: 2.2vw;
@@ -3092,6 +3101,7 @@ button:hover {
   }
   .eve_detail_2_1_1 {
     font-size: 6vw;
+    text-align: center;
   }
   .eve_edtail_2_1_tag {
     font-size: 2.4vw;
@@ -3143,6 +3153,7 @@ button:hover {
   }
   .eve_detail_1 {
     width: 100%;
+    display: none;
   }
   #eve_img {
     height: auto !important;
@@ -3218,8 +3229,6 @@ button:hover {
     align-items: flex-start;
   }
 
-  .eve_detail_1 {
-  }
   .eve_detail_mobile_con {
     display: flex;
   }
@@ -3231,6 +3240,7 @@ button:hover {
     padding: 3vw 0vw;
     border-radius: 4px;
     font-weight: 600;
+    display: block !important;
   }
   .eve_mobile_reg:hover {
     background: #000;
@@ -3244,6 +3254,9 @@ button:hover {
   }
   .eve_detail_1_3_link {
     width: unset;
+  }
+  .mob {
+    display: flex;
   }
 }
 
